--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 		<version>3.3.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
 	<groupId>com.josiasmartins</groupId>
 	<artifactId>cosmos_spring</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -35,16 +36,17 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-<!--		<dependency>-->
-<!--			<groupId>com.azure.spring</groupId>-->
-<!--			<artifactId>spring-cloud-azure-starter-data-cosmos</artifactId>-->
-<!--		</dependency>-->
 
 		<dependency>
-			<groupId>com.microsoft.azure</groupId>
-			<artifactId>spring-data-cosmosdb</artifactId>
-			<version>2.3.0</version>
+			<groupId>com.azure.spring</groupId>
+			<artifactId>spring-cloud-azure-starter-data-cosmos</artifactId>
 		</dependency>
+
+<!--		<dependency>-->
+<!--			<groupId>com.microsoft.azure</groupId>-->
+<!--			<artifactId>spring-data-cosmosdb</artifactId>-->
+<!--			<version>2.3.1</version>-->
+<!--		</dependency>-->
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
