chore: change name

--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,10 @@
 	</parent>
 
 	<groupId>com.josiasmartins</groupId>
-	<artifactId>cosmos_spring</artifactId>
+	<artifactId>devonca_cosmos</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>cosmos_spring</name>
-	<description>Api with Cosmos Spring</description>
+	<name>devonca_cosmos</name>
+	<description>Back end devonca</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -42,17 +42,12 @@
 			<artifactId>spring-cloud-azure-starter-data-cosmos</artifactId>
 		</dependency>
 
-<!--		<dependency>-->
-<!--			<groupId>com.microsoft.azure</groupId>-->
-<!--			<artifactId>spring-data-cosmosdb</artifactId>-->
-<!--			<version>2.3.1</version>-->
-<!--		</dependency>-->
-
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
